feat(fe,be): prepare template for production use
